# serializer version: 1
# name: EditUserInfoViewTest.test_edit_without_title[missing title warning with phone and address]
  '''
  <div class="alert alert-warning" id="missing-infos-warning" role="status">
                                  <div class="row">
                                      <div class="col-auto pe-0">
                                          <i class="ri-information-line ri-xl text-warning"></i>
                                      </div>
                                      <div class="col">
                                          <p class="mb-2">
                                              <strong>Informations manquantes</strong>
                                          </p>
                                          <p>Une ou plusieurs informations de votre profil sont nécessaires pour utiliser votre espace candidat.</p>
                                          <p class="mb-0">
                                              Les champs suivants ne sont pas renseignés :
                                              </p><ul>
                                                  
                                                      
                                                  
                                                      
                                                          <li>
                                                              <strong>Civilité</strong>
                                                          </li>
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                          <li>
                                                              <strong>Téléphone</strong>
                                                          </li>
                                                      
                                                  
                                                      
                                                          <li>
                                                              <strong>Adresse</strong>
                                                          </li>
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                              </ul>
                                          <p></p>
                                      </div>
                                  </div>
                              </div>
  '''
# ---
# name: EditUserInfoViewTest.test_edit_without_title[missing title warning without phone and with birthdate]
  '''
  <div class="alert alert-warning" id="missing-infos-warning" role="status">
                                  <div class="row">
                                      <div class="col-auto pe-0">
                                          <i class="ri-information-line ri-xl text-warning"></i>
                                      </div>
                                      <div class="col">
                                          <p class="mb-2">
                                              <strong>Informations manquantes</strong>
                                          </p>
                                          <p>Une ou plusieurs informations de votre profil sont nécessaires pour utiliser votre espace candidat.</p>
                                          <p class="mb-0">
                                              Les champs suivants ne sont pas renseignés :
                                              </p><ul>
                                                  
                                                      
                                                  
                                                      
                                                          <li>
                                                              <strong>Civilité</strong>
                                                          </li>
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                          <li>
                                                              <strong>Date de naissance</strong>
                                                          </li>
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                              </ul>
                                          <p></p>
                                      </div>
                                  </div>
                              </div>
  '''
# ---
# name: test_alert_message_for_ai_stock_prolongation[AI]
  '''
  <div class="alert alert-info" id="AIStockProlongationAlert">
              <p>
                  Si votre structure est concernée par la délivrance automatique de PASS IAE qui a eu lieu le 01/12/2021, nous vous invitons à <a href="/approvals/list">vérifier que leur durée de validité couvre bien la période de travail prévue</a>.
                  <br/>
                  Si des prolongations de parcours sont nécessaires, nous vous invitons à réaliser vos demandes de prolongation tant que les PASS IAE sont valides.
              </p>
              <p class="mb-0">
                  <i>
                      Attention : une demande de prolongation n’est plus possible si le PASS IAE est expiré.
                      <br/>
                      Prévoir un délai de traitement par le prescripteur habilité d’environ 7 jours.
                  </i>
              </p>
          </div>
  '''
# ---
